--- a/css/creative.css
+++ b/css/creative.css
@@ -14,6 +14,17 @@ body {
 #event-page {
   padding-top: 70px;
 }
+#homeHeading {
+    margin: 40px;
+    margin-bottom: 15%;
+}
+#cont-head {
+    margin-bottom: 8%;
+    margin-left: 10px;
+}
+#contact {
+    margin-bottom: 10%;
+}
 footer {
     margin: 50px 0;
 }
