--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,18 +12,18 @@
     <title>Chitkara University - Events</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='vendor/magnific-popup/magnific-popup.css') }}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/creative.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/creative.css') }}" rel="stylesheet">
 
 </head>
 
@@ -36,7 +36,7 @@
                 <a class="navbar-brand page-scroll" href="#page-top">Chitkara University</a>
             </div>
             <div class="login-btn">
-                <a href="#login-page" class="btn btn-primary page-scroll btn-xl" id="login-btn">Login or Signup</a>
+                <a href="{{url_for('loginPage')}}" class="btn btn-primary page-scroll btn-xl" id="login-btn">Login</a>
             </div>
         </div>
         <!-- /.container-fluid -->
@@ -47,26 +47,26 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">All about the events at<br>Chitkara University</h1>
                 <hr>
-                <a href="upcoming.html" class="btn btn-primary btn-xl page-scroll">Upcoming Events</a>
-                <a href="ongoing.html" class="btn btn-primary btn-xl page-scroll">Ongoing Events</a>
-                <a href="previous.html" class="btn btn-primary btn-xl page-scroll">Previous Events</a>
+                <a href="{{url_for('eventList', event_type='upcoming')}}" class="btn btn-primary btn-xl page-scroll">Upcoming Events</a>
+                <a href="{{url_for('eventList', event_type='ongoing')}}" class="btn btn-primary btn-xl page-scroll">Ongoing Events</a>
+                <a href="{{url_for('eventList', event_type='previous')}}" class="btn btn-primary btn-xl page-scroll">Previous Events</a>
             </div>
         </div>
     </header>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="{{ url_for('static', filename='vendor/scrollreveal/scrollreveal.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/magnific-popup/jquery.magnific-popup.min.js') }}"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+    <script src="{{ url_for('static', filename='js/creative.min.js') }}"></script>
 
 </body>
 
