--- a/templates/post_event.html
+++ b/templates/post_event.html
@@ -124,7 +124,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{logged}} <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
                             <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -145,10 +145,10 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
+                    <li>
                         <a href="{{url_for('dashboard')}}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="{{url_for('postEvent')}}"><i class="fa fa-fw fa-bar-chart-o"></i> Post Event</a>
                     </li>
                     <li>
@@ -189,18 +189,91 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
-                            Blank Page
-                            <small>Subheading</small>
-                        </h1>
-                        <ol class="breadcrumb">
-                            <li>
-                                <i class="fa fa-dashboard"></i>  <a href="#">Dashboard</a>
-                            </li>
-                            <li class="active">
-                                <i class="fa fa-file"></i> Blank Page
-                            </li>
-                        </ol>
+                        <form class="form-horizontal" action="#" method="post">
+                            <fieldset>
+
+                                <div class="row">
+                                    <div class="col-md-4"></div>
+                                    <div class="col-md-4">
+                                        <h2>Post a new Event :</h2><br>
+                                    </div>
+                                </div>
+
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="fn">Title:</label>  
+                                    <div class="col-md-4">
+                                        <input name="title" type="text" class="form-control input-md" required="">
+                                    </div>
+                                </div>
+
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">Start Date:</label>  
+                                    <div class="col-md-4">
+                                        <input name="starts" type="text" class="form-control input-md" required="" placeholder="DD/MM/YYYY">
+                                    </div>
+                                </div>
+                                
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">End Date:</label>  
+                                    <div class="col-md-4">
+                                        <input name="ends" type="text" class="form-control input-md" required="" placeholder="DD/MM/YYYY">
+                                    </div>
+                                </div>
+                                
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">Description:</label>  
+                                    <textarea rows="5" name="description"></textarea>
+                                </div>
+                                
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">Contact:</label>  
+                                    <textarea rows="5" name="contact"></textarea>
+                                </div>
+                                
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">Club:</label>  
+                                    <div class="col-md-4">
+                                        <input name="club" type="text" class="form-control input-md" required="">
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">Event Type:</label>
+                                    <div class="radio col-md-4">
+                                        <label>
+                                            <input type="radio" name="type" value="upcoming" checked>Upcoming
+                                        </label>
+                                    </div>
+                                    <label class="col-md-4 control-label"></label>
+                                    <div class="radio col-md-4">
+                                        <label>
+                                            <input type="radio" name="type" value="ongoing">Ongoing
+                                        </label>
+                                    </div>
+                                    <label class="col-md-4 control-label"></label>
+                                    <div class="radio col-md-4">
+                                        <label>
+                                            <input type="radio" name="type" value="previous">Previous
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <!-- Button -->
+                                <div class="row">
+                                    <div class="col-md-4"></div>
+                                    <div class="col-md-4">
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </div>
+                                </div>
+                                
+                            </fieldset>
+                        </form>
                     </div>
                 </div>
                 <!-- /.row -->
