--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -145,7 +145,7 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
+                    <li>
                         <a href="{{url_for('dashboard')}}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
@@ -172,18 +172,102 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
-                            Blank Page
-                            <small>Subheading</small>
-                        </h1>
-                        <ol class="breadcrumb">
-                            <li>
-                                <i class="fa fa-dashboard"></i>  <a href="#">Dashboard</a>
-                            </li>
-                            <li class="active">
-                                <i class="fa fa-file"></i> Blank Page
-                            </li>
-                        </ol>
+                        <form class="form-horizontal" action="#" method="post">
+                <fieldset>
+
+                    <div class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4">
+                            <h2>Your Profile :</h2><br>
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">E-Mail:</label>  
+                        <div class="col-md-4">
+                            <input name="email" type="text" class="form-control input-md" required="" value="{{profile.email}}">
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">First Name:</label>  
+                        <div class="col-md-4">
+                            <input name="f_name" type="text" class="form-control input-md" required="" value="{{profile.f_name}}">
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Last Name:</label>  
+                        <div class="col-md-4">
+                            <input name="l_name" type="text" class="form-control input-md" required="" value="{{profile.l_name}}">
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Mobile No.:</label>  
+                        <div class="col-md-4">
+                            <input name="mobile" type="text" class="form-control input-md" required="" value="{{profile.mobile}}">
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Date of Birth</label>  
+                        <div class="col-md-4">
+                            <input name="dob" type="text" placeholder="DD/MM/YYYY" class="form-control input-md" required="" value="{{profile.dob}}">
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Roll No.:</label>  
+                        <div class="col-md-4">
+                            <input name="rollno" type="text" class="form-control input-md" required="" value="{{profile.rollno}}">
+                        </div>
+                    </div>
+
+                    <!-- Multiple Radios (inline) -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label">Gender:</label>
+                        {% if profile.gender == "M" %}
+                        <div class="col-md-4">
+                            <label class="radio-inline">
+                                <input type="radio" name="gender" value="M" checked="checked">
+                            Male
+                            </label> 
+                            <label class="radio-inline">
+                                <input type="radio" name="gender" value="F">
+                            Female
+                            </label>
+                        </div>
+                        {% else %}
+                        <div class="col-md-4">
+                            <label class="radio-inline">
+                                <input type="radio" name="gender" value="M">
+                            Male
+                            </label> 
+                            <label class="radio-inline">
+                                <input type="radio" name="gender" value="F" checked="checked">
+                            Female
+                            </label>
+                        </div>
+                        {% endif %}
+                    </div>
+                    
+                    <!-- Button -->
+                    <div class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                    
+                </fieldset>
+            </form>
                     </div>
                 </div>
                 <!-- /.row -->
