--- a/templates/post_event.html
+++ b/templates/post_event.html
@@ -124,10 +124,10 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{logged}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="{{url_for('editProfile')}}"><i class="fa fa-fw fa-user"></i> Profile</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
@@ -152,30 +152,13 @@
                         <a href="{{url_for('postEvent')}}"><i class="fa fa-fw fa-bar-chart-o"></i> Post Event</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-table"></i> Tables</a>
+                        <a href="#"><i class="fa fa-fw fa-table"></i> Create Team</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-edit"></i> Forms</a>
+                        <a href="#"><i class="fa fa-fw fa-edit"></i> Post List</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-wrench"></i> Bootstrap Grid</a>
-                    </li>
-                    <li>
-                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo" class="collapse">
-                            <li>
-                                <a href="#">Dropdown Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Dropdown Item</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-file"></i> Blank Page</a>
+                        <a href="#"><i class="fa fa-fw fa-desktop"></i> Send Message</a>
                     </li>
                 </ul>
             </div>
@@ -225,14 +208,18 @@
                                 
                                 <!-- Text input-->
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label">Description:</label>  
-                                    <textarea rows="5" name="description"></textarea>
+                                    <label class="col-md-4 control-label">Description:</label>
+                                    <div class="col-md-4">
+                                        <textarea class="form-control" rows="5" name="description"></textarea>
+                                    </div>
                                 </div>
                                 
                                 <!-- Text input-->
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label">Contact:</label>  
-                                    <textarea rows="5" name="contact"></textarea>
+                                    <label class="col-md-4 control-label">Contact:</label>
+                                    <div class="col-md-4">
+                                        <textarea class="form-control" rows="5" name="contact"></textarea>
+                                    </div>
                                 </div>
                                 
                                 <!-- Text input-->
@@ -250,17 +237,34 @@
                                             <input type="radio" name="type" value="upcoming" checked>Upcoming
                                         </label>
                                     </div>
+                                </div>
+                                
+                                <div class="form-group">
                                     <label class="col-md-4 control-label"></label>
                                     <div class="radio col-md-4">
                                         <label>
                                             <input type="radio" name="type" value="ongoing">Ongoing
                                         </label>
                                     </div>
+                                </div>
+                                
+                                <div class="form-group">
                                     <label class="col-md-4 control-label"></label>
                                     <div class="radio col-md-4">
                                         <label>
                                             <input type="radio" name="type" value="previous">Previous
                                         </label>
+                                    </div>
+                                </div>
+                                
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label">Event Head:</label>
+                                    <div class="col-md-4">
+                                        <select name="head" class="form-control">
+                                            {% for user in users %}
+                                            <option value="{{user.username}}">{{user.username}}</option>
+                                            {% endfor %}
+                                        </select>
                                     </div>
                                 </div>
 
