--- a/templates/post_event.html
+++ b/templates/post_event.html
@@ -161,6 +161,9 @@
                     <li>
                         <a href="#"><i class="fa fa-fw fa-desktop"></i> Send Message</a>
                     </li>
+                    <li>
+                        <a href="{{url_for('myEvents')}}"><i class="fa fa-fw fa-wrench"></i> My Events</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
