--- a/templates/signup_page.html
+++ b/templates/signup_page.html
@@ -83,7 +83,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label">Password:</label>  
                         <div class="col-md-4">
-                            <input name="password" type="text" class="form-control input-md" required="">
+                            <input name="password" type="password" class="form-control input-md" required="">
                         </div>
                     </div>
 
