--- a/templates/dashboard/change_password.html
+++ b/templates/dashboard/change_password.html
@@ -9,20 +9,21 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                        <h2>Revoke Permissions :</h2><br>
+                        <h2>Change Password :</h2><br>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Account:</label>
+                    <label class="col-md-4 control-label">Old Password:</label>  
                     <div class="col-md-4">
-                        <select name="username" class="form-control">
-                            {% for user in users %}
-                            {% if user.acc_type != "default" and user.acc_type != "master" %}
-                            <option value="{{user.username}}">{{user.username}}</option>
-                            {% endif %}
-                            {% endfor %}
-                        </select>
+                        <input name="oldpassword" type="password" class="form-control input-md" required="">
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label class="col-md-4 control-label">New Password:</label>  
+                    <div class="col-md-4">
+                        <input name="newpassword" type="password" class="form-control input-md" required="">
                     </div>
                 </div>
 
@@ -30,7 +31,7 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                        <button type="submit" class="btn btn-primary">Revoke</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
 
