--- a/templates/dashboard/edit_profile.html
+++ b/templates/dashboard/edit_profile.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                        <h2>Your Profile :</h2><br>
+                        <h2>Edit Profile :</h2><br>
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">Date of Birth</label>  
                     <div class="col-md-4">
-                        <input name="dob" type="text" placeholder="DD/MM/YYYY" class="form-control input-md" required="" value="{{profile.dob}}">
+                        <input name="dob" type="date" class="form-control input-md" required="" value="{{profile.dob}}">
                     </div>
                 </div>
 
