--- a/templates/dashboard/post_event.html
+++ b/templates/dashboard/post_event.html
@@ -3,7 +3,7 @@
 <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
-        <form class="form-horizontal" action="#" method="post">
+        <form class="form-horizontal" action="#" method="post" enctype="multipart/form-data">
             <fieldset>
                 <div class="row">
                     <div class="col-md-4"></div>
@@ -22,14 +22,14 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">Start Date:</label>  
                     <div class="col-md-4">
-                        <input name="starts" type="text" class="form-control input-md" required="" placeholder="DD/MM/YYYY">
+                        <input name="starts" type="date" class="form-control input-md" required="">
                     </div>
                 </div>
                 <!-- Text input-->
                 <div class="form-group">
                     <label class="col-md-4 control-label">End Date:</label>  
                     <div class="col-md-4">
-                        <input name="ends" type="text" class="form-control input-md" required="" placeholder="DD/MM/YYYY">
+                        <input name="ends" type="date" class="form-control input-md" required="">
                     </div>
                 </div>
                 <!-- Text input-->
@@ -37,13 +37,6 @@
                     <label class="col-md-4 control-label">Description:</label>
                     <div class="col-md-4">
                         <textarea class="form-control" rows="5" name="description"></textarea>
-                    </div>
-                </div>
-                <!-- Text input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Contact:</label>
-                    <div class="col-md-4">
-                        <textarea class="form-control" rows="5" name="contact"></textarea>
                     </div>
                 </div>
                 <!-- Text input-->
@@ -86,12 +79,21 @@
                     <div class="col-md-4">
                         <select name="head" class="form-control">
                             {% for user in users %}
+                            {% if user.acc_type == 'eventhead' or user.acc_type == 'default' %}
                             <option value="{{user.username}}">{{user.username}}</option>
+                            {% endif %}
                             {% endfor %}
                         </select>
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Upload Image:</label>  
+                    <div class="col-md-4">
+                        <input type="file" name="image" accept="image/jpeg">
+                    </div>
+                </div>
+                
                 <!-- Button -->
                 <div class="row">
                     <div class="col-md-4"></div>
