--- a/templates/dashboard/team_message.html
+++ b/templates/dashboard/team_message.html
@@ -1,6 +1,6 @@
 {% extends "dashboard/base.html" %}
 {% block content %}
-<!-- Page Heading -->
+
 <div class="row">
     <div class="col-lg-12">
         <form class="form-horizontal" action="#" method="post">
@@ -9,20 +9,21 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                        <h2>Revoke Permissions :</h2><br>
+                        <h2>Send Message to {{team.name}} team:</h2><br>
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Account:</label>
+                    <label class="col-md-4 control-label">Title:</label>  
                     <div class="col-md-4">
-                        <select name="username" class="form-control">
-                            {% for user in users %}
-                            {% if user.acc_type != "default" and user.acc_type != "master" %}
-                            <option value="{{user.username}}">{{user.username}}</option>
-                            {% endif %}
-                            {% endfor %}
-                        </select>
+                        <input name="title" type="text" class="form-control input-md" required="">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Message:</label>
+                    <div class="col-md-4">
+                        <textarea class="form-control" rows="5" name="message"></textarea>
                     </div>
                 </div>
 
@@ -30,7 +31,7 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                        <button type="submit" class="btn btn-primary">Revoke</button>
+                        <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                 </div>
 
@@ -38,5 +39,5 @@
         </form>
     </div>
 </div>
-<!-- /.row -->
+
 {% endblock %}
