--- a/templates/dashboard/view_profile.html
+++ b/templates/dashboard/view_profile.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <h2>Your Profile :</h2><br>
+                <h2>{{user.username}}'s Profile :</h2><br>
             </div>
         </div>
 
