--- a/templates/display/event_list.html
+++ b/templates/display/event_list.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="{{ url_for('static', filename='uploads/' + event.id|string + '.jpg') }}" height="400" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -142,7 +142,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Fester 2017</p>
                 </div>
             </div>
             <!-- /.row -->
