--- a/templates/display/login_page.html
+++ b/templates/display/login_page.html
@@ -131,7 +131,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Fester 2017</p>
                 </div>
             </div>
             <!-- /.row -->
