--- a/templates/display/signup_page.html
+++ b/templates/display/signup_page.html
@@ -97,7 +97,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label">E-Mail:</label>  
                         <div class="col-md-4">
-                            <input name="email" type="text" class="form-control input-md" required="">
+                            <input name="email" type="email" class="form-control input-md" required="">
                         </div>
                     </div>
 
@@ -129,7 +129,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label">Date of Birth</label>  
                         <div class="col-md-4">
-                            <input name="dob" type="text" placeholder="DD/MM/YYYY" class="form-control input-md" required="">
+                            <input name="dob" type="date" class="form-control input-md" required="">
                         </div>
                     </div>
 
@@ -194,7 +194,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Fester 2017</p>
                 </div>
             </div>
             <!-- /.row -->
